--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: geeCRT
 Type: Package
 Title: Bias-Corrected GEE for Cluster Randomized Trials
-Version: 0.0.1
-Date: 2020-11-06
+Version: 0.1.0
+Date: 2021-03-27
 Authors@R: c(person(given = "Hengshi", family = "Yu", role = c("aut", "cre"), 
              email="hengshi@umich.edu"), 
              person(given = "Fan", family = "Li", role ="aut", 
@@ -32,4 +32,5 @@ LazyData: TRUE
 Depends: R (>= 3.6.0)
 Imports: MASS, rootSolve, mvtnorm
 Suggests: knitr, rmarkdown
+VignetteBuilder: knitr
 RoxygenNote: 7.1.0
