--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: geeCRT
 Type: Package
 Title: Bias-Corrected GEE for Cluster Randomized Trials
-Version: 0.1.0
-Date: 2021-03-27
+Version: 1.1.0
+Date: 2023-03-07
 Authors@R: c(person(given = "Hengshi", family = "Yu", role = c("aut", "cre"), 
              email="hengshi@umich.edu"), 
              person(given = "Fan", family = "Li", role ="aut", 
@@ -20,7 +20,8 @@ Description: Population-averaged models have been increasingly used in the desig
              models in CRTs, the package implements the generalized estimating equations (GEE) and 
              matrix-adjusted estimating equations (MAEE) approaches to jointly estimate the marginal 
              mean models correlation models both for general CRTs and stepped wedge CRTs. Despite the 
-             general GEE/MAEE approach, the package also implements a fast cluster-period GEE method 
+             general GEE/MAEE approach, the package also implements a fast cluster-period GEE method by 
+             Li et al. (2021) <doi:10.1093/biostatistics/kxaa056>
              specifically for stepped wedge CRTs with large and variable cluster-period sizes and gives 
              a simple and efficient estimating equations approach based on the cluster-period means to 
              estimate the intervention effects as well as correlation parameters. In addition, the package 
@@ -33,4 +34,14 @@ Depends: R (>= 3.6.0)
 Imports: MASS, rootSolve, mvtnorm
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
-RoxygenNote: 7.1.0
+RoxygenNote: 7.2.3
+Encoding: UTF-8
+NeedsCompilation: no
+Packaged: 2021-10-09 21:55:47 UTC; hengshiyu
+Author: Hengshi Yu [aut, cre],
+  Fan Li [aut],
+  Paul Rathouz [aut],
+  Elizabeth L. Turner [aut],
+  John Preisser [aut]
+Repository: CRAN
+Date/Publication: 2021-10-10 04:10:02 UTC
